add sort and filter to get all products